@startuml clases_reportes

title Diagrama de Clases — apps.reportes (P7: Procesamiento, Ranking, Reportes + IA)

skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor #EFF6FF
  BorderColor #1A5276
}

enum "ResumenIA.Estado" as EstadoResumen {
  PENDIENTE
  PROCESANDO
  COMPLETADO
  ERROR
}

enum "MensajeChat.Rol" as RolMensaje {
  USUARIO
  ASISTENTE
  SISTEMA
}

class ResumenIA {
  + prompt_adicional: TextField
  + estado: CharField(20) = PENDIENTE
  + resultado: TextField
  + error_detalle: TextField
  + fecha_creacion: DateTimeField <<auto_now_add>>
  + fecha_completado: DateTimeField {nullable}
  --
  + __str__(): str
}
note right of ResumenIA
  CU29 (nuevo). convocatoria=None implica
  "resumen agregado de todas las convocatorias".
  Ciclo: PENDIENTE → PROCESANDO → COMPLETADO|ERROR.
  Generado por tarea_generar_resumen_ia (cola "ia"),
  con timeout vigilado por tarea Beat
  tarea_marcar_resumenes_ia_vencidos.
end note

class Conversacion {
  + titulo: CharField(200)
  + fecha_creacion: DateTimeField <<auto_now_add>>
  + fecha_actualizacion: DateTimeField <<auto_now>>
  --
  + __str__(): str
}
note right of Conversacion
  CU30 (nuevo). Historial persistente de
  chat con el asistente IA (tool calling).
end note

class MensajeChat {
  + contenido: TextField
  + tools_usadas: JSONField {nullable}
  + archivo: FileField {nullable}
  + fecha_creacion: DateTimeField <<auto_now_add>>
  --
  + __str__(): str
}
note bottom of MensajeChat
  tools_usadas registra qué herramientas
  (llm_tools.py) invocó el LLM al responder
  este mensaje — trazabilidad de tool calling.
end note

class "Usuario" as Usuario <<apps.acceso>>
class "Convocatoria" as Convocatoria <<apps.convocatorias>>

ResumenIA "0..*" --> "0..1" Convocatoria : convocatoria\n(on_delete=SET_NULL, nullable)
ResumenIA "0..*" --> "1" Usuario : usuario\n(on_delete=CASCADE)
Conversacion "0..*" --> "1" Usuario : usuario\n(on_delete=CASCADE)
Conversacion "1" *-- "0..*" MensajeChat : mensajes\n(on_delete=CASCADE)

ResumenIA ..> EstadoResumen : estado
MensajeChat ..> RolMensaje : rol

note as N1
  apps/reportes también define módulos sin
  modelos propios que orquestan la capa de
  dominio (no son clases UML, son módulos
  de funciones — documentados aparte en la
  sección "Capa de servicios"):
  selectors.py, charts.py, charts_matplotlib.py,
  llm_client.py (cliente Ollama),
  llm_tools.py (tool calling, lista blanca).
end note

@enduml
